--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,30 @@
+# = DATA SOURCE
+# ===============================
+#postgreSQL configurations for the database connection
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=Adm!n
 
+# Keep the connection alive if idle for a long time (needed in production)
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
+
+#after how long the connection times out and the amount of connection ata time allowed
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+
+# Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
+# schema will be automatically updated on application on change
+spring.jpa.hibernate.ddl-auto=update
+
+# = JPA / HIBERNATE
+# ===============================
+# Show or not log for each sql query
+spring.jpa.hibernate.show-sql=true
+
+# Naming strategy
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
+spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
