--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,8 @@ spring.datasource.hikari.maximumPoolSize=5
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically updated on application on change
 spring.jpa.hibernate.ddl-auto=update
+# schema will be automatically created afresh for every start of application - Useful in Production Env
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 # = JPA / HIBERNATE
 # ===============================
