--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,9 @@
 #postgreSQL configurations for the database connection
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=Adm!n
+#failed password
+#spring.datasource.password=Adm!n
+spring.datasource.password=Admneofetch
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
